Tritao: Authentication with code optimizations.